Revision history for ocsreports 
2.0.2
		* update polish language file. tx to Piotr Adamcio
		* fix bug on softwares detail on computer
		* sort categories on dictionary
2.0.1
		* fix bug on order by ip addresses (http://forums.ocsinventory-ng.org/viewtopic.php?pid=42066)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/842809
		* configure the defaut number result by page
		* add message for max_allowed_packet MySQL conf
		* fix logout of CAS connexion (http://forums.ocsinventory-ng.org/viewtopic.php?pid=41923#p41923)
		* fix bug on package search
		* show macaddress info and fix bug on link.
		* delete jpgraph and fusionCharts librairies. Now we use elycharts librairie (http://elycharts.com) 
		* fix http://forums.ocsinventory-ng.org/viewtopic.php?pid=41775#p41775 and use language files 
		* add a query condition to display icon (computer's details)
		* delete verdana font
		* add error message when max_allowed_packet (mysql configuration) is smaller than the file sent 
		* fix bug: use separator for column name on export file
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/807412
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/814050
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/825333 (can see group's detail from computer's detail)
		* Fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/825332
		* fix default language to english (https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/824434)
		* fix bug on add/delete computors in a group for restricted profil.
		* FIX: unable to search LDAP from root of tree http://forums.ocsinventory-ng.org/viewtopic.php?pid=38310#p38310
		* add export XML inventory
		* add plugins options
		* change delete computers function (no orphans on plugins tables)
		* https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/812861
		* add possibility to show mac address on "all computers".
		* Add checkbox to delete few computers.